# sitecapture

./: .gitignore  DESIGN.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build_exe.bat  check_project.bat  check_project.py  gui_main.py  install.bat  keywords_sample.txt  live_test.bat  live_test.py  main.py  pyproject.toml  requirements.txt  run_built.bat  run_example.bat  run_gui.bat
site_capture/: __init__.py  capture.py  cdp.py  chrome.py  errors.py  execution.py  google.py  keyword_io.py  manifest.py  models.py  paths.py  query.py  runner.py  single_instance.py  stage2_runner.py
site_capture/gui/: __init__.py  control.py  dialogs.py  events.py  execution_view.py  failure.py  font.py  log_view.py  main_window.py  results_view.py  settings_view.py  theme.py  widgets.py  worker.py
site_capture/persistence/: __init__.py  models.py  repository.py  resume.py  schema.py
tests/: integration_local_cdp.py  test_gui_font.py  test_gui_layout.py  test_main_window.py  test_manifest.py  test_resume.py  test_single_instance.py  test_stage1.py  test_stage2.py  test_stage3.py  test_stage4.py
